# OOP2

./: CMakeLists.txt  main.cpp
include/: octal.h
src/: octal.cpp
